v0.0.1/modules/schema/pages/class/PassThroughBill.adoc
= `PassThroughBill`
:toclevels: 4


+++Pass Through Bill is used for:
1)Two sided charge transactions with or without ISO involvement
2) Specific direct charges or payments that are calculated outside or provided directly to settlements
3) Specific charge bill determinants that are externally supplied and used in charge calculations+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:PassThroughBill`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/Document.adoc[`Document`]
*** *`PassThroughBill`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
PassThroughBill {
  style {
    fill: "#fffbef"
    shadow: true
  }
}









FloatQuantity {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}





MktUserAttribute {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



MarketStatementLineItem {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



ChargeProfile {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



Status {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ElectronicAddress {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Status {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ActivityRecord {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ConfigurationEvent {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Author {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Editor {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Approver {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Issuer {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}







PassThroughBill -> FloatQuantity: quantity



PassThroughBill -> MktUserAttribute: MktUserAttribute


PassThroughBill -> MarketStatementLineItem: MarketStatementLineItem


PassThroughBill -> ChargeProfile: ChargeProfiles


PassThroughBill -> Status: docStatus


PassThroughBill -> ElectronicAddress: electronicAddress


PassThroughBill -> Status: status


PassThroughBill -> ActivityRecord: ActivityRecord


PassThroughBill -> ConfigurationEvent: ConfigurationEvents


PassThroughBill -> Author: Author


PassThroughBill -> Editor: Editor


PassThroughBill -> Approver: Approver


PassThroughBill -> Issuer: Issuer


PassThroughBill -> DiagramObject: DiagramObjects


PassThroughBill -> InstanceSet: InstanceSet


PassThroughBill -> Name: Names


PassThroughBill -> ChangeSetMember: PropertiesCIMDataObject


PassThroughBill -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<MarketStatementLineItem,`MarketStatementLineItem`>>
| 0..1
| xref::class/MarketStatementLineItem.adoc[`MarketStatementLineItem`]
| n/a

| <<adjustedAmount,`adjustedAmount`>>
| 0..1
| xref::class/Money.adoc[`Money`]
| n/a

| <<amount,`amount`>>
| 0..1
| xref::class/Money.adoc[`Money`]
| +++The charge amount of the product/service.+++

| <<billEnd,`billEnd`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Bill period end date+++

| <<billRunType,`billRunType`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The settlement run type, for example: prelim, final, and rerun.+++

| <<billStart,`billStart`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Bill period start date+++

| <<billedTo,`billedTo`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The company to which the PTB transaction is billed.+++

| <<effectiveDate,`effectiveDate`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++The effective date of the transaction+++

| <<isDisputed,`isDisputed`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Disputed transaction indicator+++

| <<isProfiled,`isProfiled`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++A flag indicating whether there is a profile data associated with the PTB.+++

| <<paidTo,`paidTo`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The company to which the PTB transaction is paid.+++

| <<previousEnd,`previousEnd`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++The previous bill period end date+++

| <<previousStart,`previousStart`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++The previous bill period start date+++

| <<price,`price`>>
| 0..1
| xref::class/Money.adoc[`Money`]
| +++The price of product/service.+++

| <<productCode,`productCode`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The product identifier for determining the charge type of the transaction.+++

| <<providedBy,`providedBy`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The company by which the PTB transaction service is provided.+++

| <<quantity,`quantity`>>
| 0..1
| xref::class/FloatQuantity.adoc[`FloatQuantity`]
| +++The product quantity.+++

| <<serviceEnd,`serviceEnd`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++The end date of service provided, if periodic.+++

| <<serviceStart,`serviceStart`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++The start date of service provided, if periodic.+++

| <<soldTo,`soldTo`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The company to which the PTB transaction is sold.+++

| <<taxAmount,`taxAmount`>>
| 0..1
| xref::class/Money.adoc[`Money`]
| +++The tax on services taken.+++

| <<timeZone,`timeZone`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The time zone code+++

| <<tradeDate,`tradeDate`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++The trade date+++

| <<transactionDate,`transactionDate`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++The date the transaction occurs.+++

| <<transactionType,`transactionType`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The type of transaction. For example, charge customer, bill customer, matching AR/AP, or bill determinant+++

| <<ChargeProfiles,`ChargeProfiles`>>
| 0..*
| xref::class/ChargeProfile.adoc[`ChargeProfile`]
| n/a

| <<MktUserAttribute,`MktUserAttribute`>>
| 0..*
| xref::class/MktUserAttribute.adoc[`MktUserAttribute`]
| n/a

| <<Approver,`Approver`>>
| 0..1
| xref::class/Approver.adoc[`Approver`]
| +++Approver of this document.+++

| <<Author,`Author`>>
| 0..1
| xref::class/Author.adoc[`Author`]
| +++Author of this document.+++

| <<Editor,`Editor`>>
| 0..1
| xref::class/Editor.adoc[`Editor`]
| +++Editor of this document.+++

| <<Issuer,`Issuer`>>
| 0..1
| xref::class/Issuer.adoc[`Issuer`]
| +++Issuer of this document.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<authorName,`authorName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Name of the author of this document.+++

| <<comment,`comment`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Free text comment.+++

| <<createdDateTime,`createdDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date and time that this document was created.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<docStatus,`docStatus`>>
| 0..1
| xref::class/Status.adoc[`Status`]
| +++Status of this document. For status of subject matter this document represents (e.g., Agreement, Work), use 'status' attribute.
Example values for 'docStatus.status' are draft, approved, cancelled, etc.+++

| <<electronicAddress,`electronicAddress`>>
| 0..1
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]
| +++Electronic address.+++

| <<lastModifiedDateTime,`lastModifiedDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date and time this document was last modified. Documents may potentially be modified many times during their lifetime.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<revisionNumber,`revisionNumber`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Revision number for this document.+++

| <<status,`status`>>
| 0..1
| xref::class/Status.adoc[`Status`]
| +++Status of subject matter (e.g., Agreement, Work) this document represents. For status of the document itself, use 'docStatus' attribute.+++

| <<subject,`subject`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Document subject.+++

| <<title,`title`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Document title.+++

| <<type,`type`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Utility-specific classification of this document, according to its corporate standards, practices, and existing IT systems (e.g., for management of assets, maintenance, work, outage, customers, etc.).+++

| <<ActivityRecord,`ActivityRecord`>>
| 0..*
| xref::class/ActivityRecord.adoc[`ActivityRecord`]
| +++The activity record for a document+++

| <<ConfigurationEvents,`ConfigurationEvents`>>
| 0..*
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]
| +++All configuration events created for this document.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#ActivityRecord]
=== `ActivityRecord`
+++The activity record for a document+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.ActivityRecord`
| Cardinality
| 0..*
| Type
| xref::class/ActivityRecord.adoc[`ActivityRecord`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#adjustedAmount]
=== `adjustedAmount`


[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.adjustedAmount`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#amount]
=== `amount`
+++The charge amount of the product/service.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.amount`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

//[discrete]
[#Approver]
=== `Approver`
+++Approver of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Approver`
| Cardinality
| 0..1
| Type
| xref::class/Approver.adoc[`Approver`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#Author]
=== `Author`
+++Author of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Author`
| Cardinality
| 0..1
| Type
| xref::class/Author.adoc[`Author`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#authorName]
=== `authorName`
+++Name of the author of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.authorName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#billedTo]
=== `billedTo`
+++The company to which the PTB transaction is billed.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.billedTo`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#billEnd]
=== `billEnd`
+++Bill period end date+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.billEnd`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#billRunType]
=== `billRunType`
+++The settlement run type, for example: prelim, final, and rerun.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.billRunType`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#billStart]
=== `billStart`
+++Bill period start date+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.billStart`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#ChargeProfiles]
=== `ChargeProfiles`


[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.ChargeProfiles`
| Cardinality
| 0..*
| Type
| xref::class/ChargeProfile.adoc[`ChargeProfile`]


|===

//[discrete]
[#comment]
=== `comment`
+++Free text comment.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.comment`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#ConfigurationEvents]
=== `ConfigurationEvents`
+++All configuration events created for this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.ConfigurationEvents`
| Cardinality
| 0..*
| Type
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#createdDateTime]
=== `createdDateTime`
+++Date and time that this document was created.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.createdDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#docStatus]
=== `docStatus`
+++Status of this document. For status of subject matter this document represents (e.g., Agreement, Work), use 'status' attribute.
Example values for 'docStatus.status' are draft, approved, cancelled, etc.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.docStatus`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#Editor]
=== `Editor`
+++Editor of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Editor`
| Cardinality
| 0..1
| Type
| xref::class/Editor.adoc[`Editor`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#effectiveDate]
=== `effectiveDate`
+++The effective date of the transaction+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.effectiveDate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#electronicAddress]
=== `electronicAddress`
+++Electronic address.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.electronicAddress`
| Cardinality
| 0..1
| Type
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#isDisputed]
=== `isDisputed`
+++Disputed transaction indicator+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.isDisputed`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#isProfiled]
=== `isProfiled`
+++A flag indicating whether there is a profile data associated with the PTB.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.isProfiled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#Issuer]
=== `Issuer`
+++Issuer of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Issuer`
| Cardinality
| 0..1
| Type
| xref::class/Issuer.adoc[`Issuer`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#lastModifiedDateTime]
=== `lastModifiedDateTime`
+++Date and time this document was last modified. Documents may potentially be modified many times during their lifetime.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.lastModifiedDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#MarketStatementLineItem]
=== `MarketStatementLineItem`


[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.MarketStatementLineItem`
| Cardinality
| 0..1
| Type
| xref::class/MarketStatementLineItem.adoc[`MarketStatementLineItem`]


|===

//[discrete]
[#MktUserAttribute]
=== `MktUserAttribute`


[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.MktUserAttribute`
| Cardinality
| 0..*
| Type
| xref::class/MktUserAttribute.adoc[`MktUserAttribute`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#paidTo]
=== `paidTo`
+++The company to which the PTB transaction is paid.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.paidTo`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#previousEnd]
=== `previousEnd`
+++The previous bill period end date+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.previousEnd`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#previousStart]
=== `previousStart`
+++The previous bill period start date+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.previousStart`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#price]
=== `price`
+++The price of product/service.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.price`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

//[discrete]
[#productCode]
=== `productCode`
+++The product identifier for determining the charge type of the transaction.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.productCode`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#providedBy]
=== `providedBy`
+++The company by which the PTB transaction service is provided.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.providedBy`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#quantity]
=== `quantity`
+++The product quantity.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.quantity`
| Cardinality
| 0..1
| Type
| xref::class/FloatQuantity.adoc[`FloatQuantity`]


|===

//[discrete]
[#revisionNumber]
=== `revisionNumber`
+++Revision number for this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.revisionNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#serviceEnd]
=== `serviceEnd`
+++The end date of service provided, if periodic.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.serviceEnd`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#serviceStart]
=== `serviceStart`
+++The start date of service provided, if periodic.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.serviceStart`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#soldTo]
=== `soldTo`
+++The company to which the PTB transaction is sold.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.soldTo`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#status]
=== `status`
+++Status of subject matter (e.g., Agreement, Work) this document represents. For status of the document itself, use 'docStatus' attribute.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#subject]
=== `subject`
+++Document subject.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.subject`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#taxAmount]
=== `taxAmount`
+++The tax on services taken.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.taxAmount`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

//[discrete]
[#timeZone]
=== `timeZone`
+++The time zone code+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.timeZone`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#title]
=== `title`
+++Document title.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.title`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#tradeDate]
=== `tradeDate`
+++The trade date+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.tradeDate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#transactionDate]
=== `transactionDate`
+++The date the transaction occurs.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.transactionDate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#transactionType]
=== `transactionType`
+++The type of transaction. For example, charge customer, bill customer, matching AR/AP, or bill determinant+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.transactionType`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#type]
=== `type`
+++Utility-specific classification of this document, according to its corporate standards, practices, and existing IT systems (e.g., for management of assets, maintenance, work, outage, customers, etc.).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.type`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===


