v1.1.0/modules/schema/pages/class/PassThroughBill.adoc
= `PassThroughBill`
:toclevels: 4


+++Pass Through Bill is used for:
1)Two sided charge transactions with or without ISO involvement
2) Specific direct charges or payments that are calculated outside or provided directly to settlements
3) Specific charge bill determinants that are externally supplied and used in charge calculations+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:PassThroughBill`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/Document.adoc[`Document`]
*** *`PassThroughBill`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<ChargeProfiles,`ChargeProfiles`>>
//| [[slots_table.ChargeProfiles]]<<ChargeProfiles,`ChargeProfiles`>>
| 0..* +
xref::class/ChargeProfile.adoc[`ChargeProfile`]
| _n/a_
| _n/a_

| <<MarketStatementLineItem,`MarketStatementLineItem`>>
//| [[slots_table.MarketStatementLineItem]]<<MarketStatementLineItem,`MarketStatementLineItem`>>
| 0..1 +
xref::class/MarketStatementLineItem.adoc[`MarketStatementLineItem`]
| _n/a_
| _n/a_

| <<MktUserAttribute,`MktUserAttribute`>>
//| [[slots_table.MktUserAttribute]]<<MktUserAttribute,`MktUserAttribute`>>
| 0..* +
xref::class/MktUserAttribute.adoc[`MktUserAttribute`]
| _n/a_
| _n/a_

| <<adjustedAmount,`adjustedAmount`>>
//| [[slots_table.adjustedAmount]]<<adjustedAmount,`adjustedAmount`>>
| 0..1 +
xref::class/Money.adoc[`Money`]
| _n/a_
| _n/a_

| <<amount,`amount`>>
//| [[slots_table.amount]]<<amount,`amount`>>
| 0..1 +
xref::class/Money.adoc[`Money`]
| +++The charge amount of the product/service.+++
| _n/a_

| <<billEnd,`billEnd`>>
//| [[slots_table.billEnd]]<<billEnd,`billEnd`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Bill period end date+++
| _n/a_

| <<billRunType,`billRunType`>>
//| [[slots_table.billRunType]]<<billRunType,`billRunType`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The settlement run type, for example: prelim, final, and rerun.+++
| _n/a_

| <<billStart,`billStart`>>
//| [[slots_table.billStart]]<<billStart,`billStart`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Bill period start date+++
| _n/a_

| <<billedTo,`billedTo`>>
//| [[slots_table.billedTo]]<<billedTo,`billedTo`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The company to which the PTB transaction is billed.+++
| _n/a_

| <<effectiveDate,`effectiveDate`>>
//| [[slots_table.effectiveDate]]<<effectiveDate,`effectiveDate`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++The effective date of the transaction+++
| _n/a_

| <<isDisputed,`isDisputed`>>
//| [[slots_table.isDisputed]]<<isDisputed,`isDisputed`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Disputed transaction indicator+++
| _n/a_

| <<isProfiled,`isProfiled`>>
//| [[slots_table.isProfiled]]<<isProfiled,`isProfiled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++A flag indicating whether there is a profile data associated with the PTB.+++
| _n/a_

| <<paidTo,`paidTo`>>
//| [[slots_table.paidTo]]<<paidTo,`paidTo`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The company to which the PTB transaction is paid.+++
| _n/a_

| <<previousEnd,`previousEnd`>>
//| [[slots_table.previousEnd]]<<previousEnd,`previousEnd`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++The previous bill period end date+++
| _n/a_

| <<previousStart,`previousStart`>>
//| [[slots_table.previousStart]]<<previousStart,`previousStart`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++The previous bill period start date+++
| _n/a_

| <<price,`price`>>
//| [[slots_table.price]]<<price,`price`>>
| 0..1 +
xref::class/Money.adoc[`Money`]
| +++The price of product/service.+++
| _n/a_

| <<productCode,`productCode`>>
//| [[slots_table.productCode]]<<productCode,`productCode`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The product identifier for determining the charge type of the transaction.+++
| _n/a_

| <<providedBy,`providedBy`>>
//| [[slots_table.providedBy]]<<providedBy,`providedBy`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The company by which the PTB transaction service is provided.+++
| _n/a_

| <<quantity,`quantity`>>
//| [[slots_table.quantity]]<<quantity,`quantity`>>
| 0..1 +
xref::class/FloatQuantity.adoc[`FloatQuantity`]
| +++The product quantity.+++
| _n/a_

| <<serviceEnd,`serviceEnd`>>
//| [[slots_table.serviceEnd]]<<serviceEnd,`serviceEnd`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++The end date of service provided, if periodic.+++
| _n/a_

| <<serviceStart,`serviceStart`>>
//| [[slots_table.serviceStart]]<<serviceStart,`serviceStart`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++The start date of service provided, if periodic.+++
| _n/a_

| <<soldTo,`soldTo`>>
//| [[slots_table.soldTo]]<<soldTo,`soldTo`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The company to which the PTB transaction is sold.+++
| _n/a_

| <<taxAmount,`taxAmount`>>
//| [[slots_table.taxAmount]]<<taxAmount,`taxAmount`>>
| 0..1 +
xref::class/Money.adoc[`Money`]
| +++The tax on services taken.+++
| _n/a_

| <<timeZone,`timeZone`>>
//| [[slots_table.timeZone]]<<timeZone,`timeZone`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The time zone code+++
| _n/a_

| <<tradeDate,`tradeDate`>>
//| [[slots_table.tradeDate]]<<tradeDate,`tradeDate`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++The trade date+++
| _n/a_

| <<transactionDate,`transactionDate`>>
//| [[slots_table.transactionDate]]<<transactionDate,`transactionDate`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++The date the transaction occurs.+++
| _n/a_

| <<transactionType,`transactionType`>>
//| [[slots_table.transactionType]]<<transactionType,`transactionType`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The type of transaction. For example, charge customer, bill customer, matching AR/AP, or bill determinant+++
| _n/a_

| <<ActivityRecord,`ActivityRecord`>>
//| [[slots_table.ActivityRecord]]<<ActivityRecord,`ActivityRecord`>>
| 0..* +
xref::class/ActivityRecord.adoc[`ActivityRecord`]
| +++The activity record for a document+++
| xref::class/Document.adoc[`Document`]

| <<Approver,`Approver`>>
//| [[slots_table.Approver]]<<Approver,`Approver`>>
| 0..1 +
xref::class/Approver.adoc[`Approver`]
| +++Approver of this document.+++
| xref::class/Document.adoc[`Document`]

| <<Author,`Author`>>
//| [[slots_table.Author]]<<Author,`Author`>>
| 0..1 +
xref::class/Author.adoc[`Author`]
| +++Author of this document.+++
| xref::class/Document.adoc[`Document`]

| <<ConfigurationEvents,`ConfigurationEvents`>>
//| [[slots_table.ConfigurationEvents]]<<ConfigurationEvents,`ConfigurationEvents`>>
| 0..* +
xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]
| +++All configuration events created for this document.+++
| xref::class/Document.adoc[`Document`]

| <<Editor,`Editor`>>
//| [[slots_table.Editor]]<<Editor,`Editor`>>
| 0..1 +
xref::class/Editor.adoc[`Editor`]
| +++Editor of this document.+++
| xref::class/Document.adoc[`Document`]

| <<Issuer,`Issuer`>>
//| [[slots_table.Issuer]]<<Issuer,`Issuer`>>
| 0..1 +
xref::class/Issuer.adoc[`Issuer`]
| +++Issuer of this document.+++
| xref::class/Document.adoc[`Document`]

| <<authorName,`authorName`>>
//| [[slots_table.authorName]]<<authorName,`authorName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Name of the author of this document.+++
| xref::class/Document.adoc[`Document`]

| <<comment,`comment`>>
//| [[slots_table.comment]]<<comment,`comment`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Free text comment.+++
| xref::class/Document.adoc[`Document`]

| <<createdDateTime,`createdDateTime`>>
//| [[slots_table.createdDateTime]]<<createdDateTime,`createdDateTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Date and time that this document was created.+++
| xref::class/Document.adoc[`Document`]

| <<docStatus,`docStatus`>>
//| [[slots_table.docStatus]]<<docStatus,`docStatus`>>
| 0..1 +
xref::class/Status.adoc[`Status`]
| +++Status of this document. For status of subject matter this document represents (e.g., Agreement, Work), use 'status'...+++
| xref::class/Document.adoc[`Document`]

| <<electronicAddress,`electronicAddress`>>
//| [[slots_table.electronicAddress]]<<electronicAddress,`electronicAddress`>>
| 0..1 +
xref::class/ElectronicAddress.adoc[`ElectronicAddress`]
| +++Electronic address.+++
| xref::class/Document.adoc[`Document`]

| <<lastModifiedDateTime,`lastModifiedDateTime`>>
//| [[slots_table.lastModifiedDateTime]]<<lastModifiedDateTime,`lastModifiedDateTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Date and time this document was last modified. Documents may potentially be modified many times during their lifetime.+++
| xref::class/Document.adoc[`Document`]

| <<revisionNumber,`revisionNumber`>>
//| [[slots_table.revisionNumber]]<<revisionNumber,`revisionNumber`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Revision number for this document.+++
| xref::class/Document.adoc[`Document`]

| <<status,`status`>>
//| [[slots_table.status]]<<status,`status`>>
| 0..1 +
xref::class/Status.adoc[`Status`]
| +++Status of subject matter (e.g., Agreement, Work) this document represents. For status of the document itself, use...+++
| xref::class/Document.adoc[`Document`]

| <<subject,`subject`>>
//| [[slots_table.subject]]<<subject,`subject`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Document subject.+++
| xref::class/Document.adoc[`Document`]

| <<title,`title`>>
//| [[slots_table.title]]<<title,`title`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Document title.+++
| xref::class/Document.adoc[`Document`]

| <<type,`type`>>
//| [[slots_table.type]]<<type,`type`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Utility-specific classification of this document, according to its corporate standards, practices, and existing IT systems...+++
| xref::class/Document.adoc[`Document`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#ActivityRecord]
=== `ActivityRecord`
+++The activity record for a document+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.ActivityRecord`
| Cardinality
| 0..*
| Type
| xref::class/ActivityRecord.adoc[`ActivityRecord`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.ActivityRecord,&#10548;>>
--
////


//[discrete]
[#adjustedAmount]
=== `adjustedAmount`



[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.adjustedAmount`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

////
[.text-left]
--
<<slots_table.adjustedAmount,&#10548;>>
--
////


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#amount]
=== `amount`
+++The charge amount of the product/service.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.amount`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

////
[.text-left]
--
<<slots_table.amount,&#10548;>>
--
////


//[discrete]
[#Approver]
=== `Approver`
+++Approver of this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Approver`
| Cardinality
| 0..1
| Type
| xref::class/Approver.adoc[`Approver`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.Approver,&#10548;>>
--
////


//[discrete]
[#Author]
=== `Author`
+++Author of this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Author`
| Cardinality
| 0..1
| Type
| xref::class/Author.adoc[`Author`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.Author,&#10548;>>
--
////


//[discrete]
[#authorName]
=== `authorName`
+++Name of the author of this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.authorName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.authorName,&#10548;>>
--
////


//[discrete]
[#billedTo]
=== `billedTo`
+++The company to which the PTB transaction is billed.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.billedTo`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.billedTo,&#10548;>>
--
////


//[discrete]
[#billEnd]
=== `billEnd`
+++Bill period end date+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.billEnd`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.billEnd,&#10548;>>
--
////


//[discrete]
[#billRunType]
=== `billRunType`
+++The settlement run type, for example: prelim, final, and rerun.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.billRunType`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.billRunType,&#10548;>>
--
////


//[discrete]
[#billStart]
=== `billStart`
+++Bill period start date+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.billStart`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.billStart,&#10548;>>
--
////


//[discrete]
[#ChargeProfiles]
=== `ChargeProfiles`



[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.ChargeProfiles`
| Cardinality
| 0..*
| Type
| xref::class/ChargeProfile.adoc[`ChargeProfile`]


|===

////
[.text-left]
--
<<slots_table.ChargeProfiles,&#10548;>>
--
////


//[discrete]
[#comment]
=== `comment`
+++Free text comment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.comment`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.comment,&#10548;>>
--
////


//[discrete]
[#ConfigurationEvents]
=== `ConfigurationEvents`
+++All configuration events created for this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.ConfigurationEvents`
| Cardinality
| 0..*
| Type
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.ConfigurationEvents,&#10548;>>
--
////


//[discrete]
[#createdDateTime]
=== `createdDateTime`
+++Date and time that this document was created.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.createdDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.createdDateTime,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#docStatus]
=== `docStatus`
+++Status of this document. For status of subject matter this document represents (e.g., Agreement, Work), use 'status' attribute.
Example values for 'docStatus.status' are draft, approved, cancelled, etc.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.docStatus`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.docStatus,&#10548;>>
--
////


//[discrete]
[#Editor]
=== `Editor`
+++Editor of this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Editor`
| Cardinality
| 0..1
| Type
| xref::class/Editor.adoc[`Editor`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.Editor,&#10548;>>
--
////


//[discrete]
[#effectiveDate]
=== `effectiveDate`
+++The effective date of the transaction+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.effectiveDate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.effectiveDate,&#10548;>>
--
////


//[discrete]
[#electronicAddress]
=== `electronicAddress`
+++Electronic address.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.electronicAddress`
| Cardinality
| 0..1
| Type
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.electronicAddress,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#isDisputed]
=== `isDisputed`
+++Disputed transaction indicator+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.isDisputed`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.isDisputed,&#10548;>>
--
////


//[discrete]
[#isProfiled]
=== `isProfiled`
+++A flag indicating whether there is a profile data associated with the PTB.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.isProfiled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.isProfiled,&#10548;>>
--
////


//[discrete]
[#Issuer]
=== `Issuer`
+++Issuer of this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Issuer`
| Cardinality
| 0..1
| Type
| xref::class/Issuer.adoc[`Issuer`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.Issuer,&#10548;>>
--
////


//[discrete]
[#lastModifiedDateTime]
=== `lastModifiedDateTime`
+++Date and time this document was last modified. Documents may potentially be modified many times during their lifetime.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.lastModifiedDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.lastModifiedDateTime,&#10548;>>
--
////


//[discrete]
[#MarketStatementLineItem]
=== `MarketStatementLineItem`



[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.MarketStatementLineItem`
| Cardinality
| 0..1
| Type
| xref::class/MarketStatementLineItem.adoc[`MarketStatementLineItem`]


|===

////
[.text-left]
--
<<slots_table.MarketStatementLineItem,&#10548;>>
--
////


//[discrete]
[#MktUserAttribute]
=== `MktUserAttribute`



[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.MktUserAttribute`
| Cardinality
| 0..*
| Type
| xref::class/MktUserAttribute.adoc[`MktUserAttribute`]


|===

////
[.text-left]
--
<<slots_table.MktUserAttribute,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#paidTo]
=== `paidTo`
+++The company to which the PTB transaction is paid.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.paidTo`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.paidTo,&#10548;>>
--
////


//[discrete]
[#previousEnd]
=== `previousEnd`
+++The previous bill period end date+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.previousEnd`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.previousEnd,&#10548;>>
--
////


//[discrete]
[#previousStart]
=== `previousStart`
+++The previous bill period start date+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.previousStart`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.previousStart,&#10548;>>
--
////


//[discrete]
[#price]
=== `price`
+++The price of product/service.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.price`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

////
[.text-left]
--
<<slots_table.price,&#10548;>>
--
////


//[discrete]
[#productCode]
=== `productCode`
+++The product identifier for determining the charge type of the transaction.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.productCode`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.productCode,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#providedBy]
=== `providedBy`
+++The company by which the PTB transaction service is provided.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.providedBy`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.providedBy,&#10548;>>
--
////


//[discrete]
[#quantity]
=== `quantity`
+++The product quantity.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.quantity`
| Cardinality
| 0..1
| Type
| xref::class/FloatQuantity.adoc[`FloatQuantity`]


|===

////
[.text-left]
--
<<slots_table.quantity,&#10548;>>
--
////


//[discrete]
[#revisionNumber]
=== `revisionNumber`
+++Revision number for this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.revisionNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.revisionNumber,&#10548;>>
--
////


//[discrete]
[#serviceEnd]
=== `serviceEnd`
+++The end date of service provided, if periodic.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.serviceEnd`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.serviceEnd,&#10548;>>
--
////


//[discrete]
[#serviceStart]
=== `serviceStart`
+++The start date of service provided, if periodic.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.serviceStart`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.serviceStart,&#10548;>>
--
////


//[discrete]
[#soldTo]
=== `soldTo`
+++The company to which the PTB transaction is sold.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.soldTo`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.soldTo,&#10548;>>
--
////


//[discrete]
[#status]
=== `status`
+++Status of subject matter (e.g., Agreement, Work) this document represents. For status of the document itself, use 'docStatus' attribute.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.status,&#10548;>>
--
////


//[discrete]
[#subject]
=== `subject`
+++Document subject.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.subject`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.subject,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#taxAmount]
=== `taxAmount`
+++The tax on services taken.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.taxAmount`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

////
[.text-left]
--
<<slots_table.taxAmount,&#10548;>>
--
////


//[discrete]
[#timeZone]
=== `timeZone`
+++The time zone code+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.timeZone`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.timeZone,&#10548;>>
--
////


//[discrete]
[#title]
=== `title`
+++Document title.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.title`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.title,&#10548;>>
--
////


//[discrete]
[#tradeDate]
=== `tradeDate`
+++The trade date+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.tradeDate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.tradeDate,&#10548;>>
--
////


//[discrete]
[#transactionDate]
=== `transactionDate`
+++The date the transaction occurs.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.transactionDate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.transactionDate,&#10548;>>
--
////


//[discrete]
[#transactionType]
=== `transactionType`
+++The type of transaction. For example, charge customer, bill customer, matching AR/AP, or bill determinant+++


[cols="h,4",width=65%]
|===
| URI
| `cim:PassThroughBill.transactionType`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.transactionType,&#10548;>>
--
////


//[discrete]
[#type]
=== `type`
+++Utility-specific classification of this document, according to its corporate standards, practices, and existing IT systems (e.g., for management of assets, maintenance, work, outage, customers, etc.).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.type`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.type,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/ChargeProfile.adoc[`ChargeProfile`] | xref::class/ChargeProfile.adoc#PassTroughBill[`PassTroughBill`]



| xref::class/MarketStatementLineItem.adoc[`MarketStatementLineItem`] | xref::class/MarketStatementLineItem.adoc#PassThroughBill[`PassThroughBill`]



| xref::class/MktUserAttribute.adoc[`MktUserAttribute`] | xref::class/MktUserAttribute.adoc#PassThroughBill[`PassThroughBill`]


|===

